[package]
name = "crypto-lib"
version = "0.1.0"
edition = "2021"
description = "A cryptography library implementing AES, RSA, and Elliptic Curve Cryptography"
authors = ["Crypto Learner"]

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
